Closed Bug 1106346 Opened 11 years ago Closed 11 years ago

Needs to follow nsInsIAlertsService.showAlertNotification change

Categories

(MailNews Core :: Backend, defect)

defect
Not set
critical

Tracking

(thunderbird37 fixed, seamonkey2.34 fixed)

RESOLVED FIXED
Thunderbird 37.0
Tracking Status
thunderbird37 --- fixed
seamonkey2.34 --- fixed

People

(Reporter: hiro, Assigned: hiro)

References

Details

(Keywords: dogfood)

Attachments

(1 file)

0:24.84 /home/ikezoe/comm-central/mailnews/base/src/nsMessengerUnixIntegration.cpp: In member function ‘nsresult nsMessengerUnixIntegration::ShowAlertMessage(const nsAString_internal&, const nsAString_internal&, const nsACString_internal&)’: 0:24.84 /home/ikezoe/comm-central/mailnews/base/src/nsMessengerUnixIntegration.cpp:338:54: error: no matching function for call to ‘nsIAlertsService::ShowAlertNotification(const nsLiteralString&, const nsAString_internal&, const nsAString_internal&, bool, NS_ConvertASCIItoUTF16, nsMessengerUnixIntegration* const, const nsAFlatString&, const nsLiteralString&, const nsAFlatString&, const nsAFlatString&, std::nullptr_t)’ 0:24.84 nullptr);
Attachment #8530581 - Flags: review?(mkmelin+mozilla)
Assignee: nobody → hiikezoe
Keywords: dogfood
Attachment #8530581 - Flags: review?(mkmelin+mozilla) → review+
Keywords: checkin-needed
Pushed to comm-central rs=bustage fix CLOSED TREE http://hg.mozilla.org/comm-central/rev/3f82c17bf9af
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 37.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: