Bug 1106346 - Fix compiler error due to nsInsIAlertsService.showAlertNotification change r=mkmelin a=bustage fix CLOSED TREE